--- a/parte_1/index.html
+++ b/parte_1/index.html
@@ -1,1 +1,20 @@
- 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>parte 1</title>
+     <p>Antes del script...</p>
+
+     <script src="logica.js"></script>
+
+     <p>...Después del script.</p>
+
+</head>
+
+<body>
+
+</body>
+
+</html>
